--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "type": "vue-tsc --build --force --watch"
   },
   "dependencies": {
+    "@vueuse/core": "^10.11.0",
+    "pinia": "^2.1.7",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
   },
@@ -29,11 +31,14 @@
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/test-utils": "^2.4.4",
     "@vue/tsconfig": "^0.5.1",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "jsdom": "^24.0.0",
     "npm-run-all2": "^6.1.1",
+    "postcss": "^8.4.38",
     "prettier": "^3.0.3",
+    "tailwindcss": "^3.4.4",
     "typescript": "~5.3.0",
     "vite": "^5.0.11",
     "vitest": "^1.2.2",
