--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "type": "vue-tsc --build --force --watch"
   },
   "dependencies": {
+    "@formkit/vue": "^1.6.5",
     "@vueuse/core": "^10.11.0",
     "pinia": "^2.1.7",
     "vue": "^3.4.15",
